      [Before]
      method set1_host : int ($name : string, $namelen : int = 0);
      
      [After]
      method set1_host : int ($name : string, $namelen : int = -1);
  [Incompatibe Changes]
    * Remove Net::SSLeay::X509#get_ext_by_OBJ method.
    * Remove Net::SSLeay::X509_NAME#get_index_by_OBJ method.
    * Remove Net::SSLeay::X509_NAME#get_text_by_NID method.
0.022 2024-12-04
  [New Features]
    * Add Net::SSLeay::DH#new method.
    * Add Net::SSLeay::EVP_PKEY#new method.
    * Add Net::SSLeay::PEM#read_bio_PrivateKey method.
    * Add Net::SSLeay::EVP#sha256 method.
    * Add Net::SSLeay::EVP#sha512 method.
    * Add Net::SSLeay::PKCS12#new method.
    * Add Net::SSLeay::DER#(i2d_TYPE|d2i_TYPE|d2i_TYPE_bio) methods.
    * Add Net::SSLeay::PKCS12#parse method.
    * Add Net::SSLeay::OPENSSL#init_crypto method.
    
  [Incompatible Changes]
    * Add an exception to Net::SSLeay::OBJ#nid2obj method.
    * Add an exception to Net::SSLeay::OBJ#obj2nid method.
  [Bug Fix]
    * Fix bugs in methods in Net::SSLeay::OBJ class.
  [Changes]
    * Remove SSL_CIPHER class.
  [Requirement Changes]
    * Require SPVM::FindBin 0.031 for tests.
0.021 2024-12-02
  [New Features]
    * Add Net::SSLeay::ASN1_ENUMERATED#new method.
    * Add Net::SSLeay::ASN1_ENUMERATED#set_int64 method.
    * Add Net::SSLeay::ASN1_ENUMERATED#get_int64 method.
    * Add Net::SSLeay::ASN1_INTEGER#new method.
    * Add Net::SSLeay::ASN1_INTEGER#set_int64 method.
    * Add Net::SSLeay::ASN1_INTEGER#get_int64 method.
    * Add Net::SSLeay::ASN1_OBJECT#new method.
    * Add Net::SSLeay::ASN1_STRING#new method.
    * Add Net::SSLeay::ASN1_STRING#set method.
    * Add Net::SSLeay::ASN1_OCTET_STRING#new method.
    * Add Net::SSLeay::ASN1_OCTET_STRING#set method.
    * Add Net::SSLeay::ASN1_TIME#new method.
    * Add Net::SSLeay::ASN1_TIME#set method.
    * Add Net::SSLeay::ASN1_TIME#check method.
    * Add Net::SSLeay::ASN1_TIME#print method.
    * Add Net::SSLeay::ASN1_TIME#to_tm method.