@@ -81,9 +81,9 @@ int32_t SPVM__Net__SSLeay__X509_NAME__get_entry(SPVM_ENV* env, SPVM_VALUE* stack
   
   X509_NAME* self = env->get_pointer(env, stack, obj_self);
   
-  X509_NAME_ENTRY* name_entry = X509_NAME_get_entry(self, loc);
+  X509_NAME_ENTRY* name_entry_tmp = X509_NAME_get_entry(self, loc);
   
-  if (!name_entry) {
+  if (!name_entry_tmp) {
     int64_t ssl_error = ERR_peek_last_error();
     
     char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
@@ -98,16 +98,14 @@ int32_t SPVM__Net__SSLeay__X509_NAME__get_entry(SPVM_ENV* env, SPVM_VALUE* stack
     return error_id;
   }
   
+  X509_NAME_ENTRY* name_entry = X509_NAME_ENTRY_dup(name_entry_tmp);
+  
   void* obj_address_name_entry = env->new_pointer_object_by_name(env, stack, "Address", name_entry, &error_id, __func__, FILE_NAME, __LINE__);
   if (error_id) { return error_id; }
   stack[0].oval = obj_address_name_entry;
   env->call_class_method_by_name(env, stack, "Net::SSLeay::X509_NAME_ENTRY", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);  
   if (error_id) { return error_id; }
   void* obj_name_entry = stack[0].oval;
-  env->set_no_free(env, stack, obj_name_entry, 1);
-  
-  env->set_field_object_by_name(env, stack, obj_name_entry, "ref_x509_name", obj_self, &error_id, __func__, FILE_NAME, __LINE__); 
-  if (error_id) { return error_id; }
   
   stack[0].oval = obj_name_entry;
   
