@@ -40,7 +40,7 @@ Calls native L<X509_NAME_oneline|https://docs.openssl.org/1.1.1/man3/X509_NAME_p
 
 C<method get_entry : L<Net::SSLeay::X509_NAME_ENTRY|SPVM::Net::SSLeay::X509_NAME_ENTRY> ($loc : int);>
 
-Calls native L<X509_NAME_get_entry|https://docs.openssl.org/3.1/man3/X509_NAME_get_index_by_NID> functions given the pointer value of the instance, $loc, creates a new L<Net::SSLeay::X509_NAME_ENTRY|SPVM::Net::SSLeay::X509_NAME_ENTRY> object, sets the pointer value of the new object to the return value of the native function, sets C<no_free> flag of the new object to 1, and returns the new object.
+Calls native L<X509_NAME_get_entry|https://docs.openssl.org/3.1/man3/X509_NAME_get_index_by_NID> functions given the pointer value of the instance, $loc, creates a new L<Net::SSLeay::X509_NAME_ENTRY|SPVM::Net::SSLeay::X509_NAME_ENTRY> object, copies the return value of the native function using native L<X509_NAME_ENTRY_dup|https://docs.openssl.org/master/man3/X509_dup> function, sets the pointer value of the new object to the copied value, and returns the new object.
 
 =head2 get_index_by_NID
 
