@@ -19,6 +19,7 @@
     * Remove Net::SSLeay::X509#get_ext_by_OBJ method.
     * Remove Net::SSLeay::X509_NAME#get_index_by_OBJ method.
     * Remove Net::SSLeay::X509_NAME#get_text_by_NID method.
+    * Net::SSLeay::X509_NAME#get_entry method returns copied value.
 0.022 2024-12-04
   [New Features]
     * Add Net::SSLeay::DH#new method.
